# tinyrender

./: CMakeLists.txt  Circle.cpp  Circle.hpp  Elliptic.cpp  Elliptic.h  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
